--- a/teca/src/app/courses/components/activate/activate.component.scss
+++ b/teca/src/app/courses/components/activate/activate.component.scss
@@ -11,6 +11,21 @@
 
     color: #5570FF;
 }
+.courseId{
+    width: 23.4375vw;
+    height: 3.375vh;
+    margin-left: 7.88046875vw;
+    border: 1px solid rgba(111, 156, 214, 0.8);
+    box-sizing: border-box;
+
+}
+.description{
+    width: 46.875vw;
+    height: 20vh;
+    margin-left: 7.88046875vw;
+    border: 1px solid rgba(111, 156, 214, 0.8);
+    box-sizing: border-box; 
+}
 .list{
     margin-left: 7.88046875vw;
     margin-top: 27.23px;
