--- a/teca/src/app/scores/components/tables/score-table/score-table.component.html
+++ b/teca/src/app/scores/components/tables/score-table/score-table.component.html
@@ -15,33 +15,33 @@
       </ion-col>
       <ion-col >
         <ion-item lines=none>
-          <ion-label class="headers">Español</ion-label>
+          <ion-label class="headers">Analogías</ion-label>
     
         </ion-item>
       </ion-col>
       <ion-col>
         <ion-item lines=none>
-          <ion-label class="headers">Est. Sociales</ion-label>
+          <ion-label class="headers">Sinónimos</ion-label>
         </ion-item>
       </ion-col>
       <ion-col>
         <ion-item lines=none>
-          <ion-label class="headers">Cívica</ion-label>
+          <ion-label class="headers">Compratativos</ion-label>
         </ion-item>
       </ion-col>
       <ion-col>
         <ion-item lines=none>
-          <ion-label class="headers">Biología</ion-label>
+          <ion-label class="headers">Mnemotecnias</ion-label>
         </ion-item>
       </ion-col>
       <ion-col>
         <ion-item lines=none>
-          <ion-label class="headers">Física</ion-label>
+          <ion-label class="headers">Árbol</ion-label>
         </ion-item>
       </ion-col>
       <ion-col>
         <ion-item lines=none>
-          <ion-label class="headers">Química</ion-label>
+          <ion-label class="headers">Llaves</ion-label>
         </ion-item>
       </ion-col>
     </ion-row>
