--- a/teca/src/app/shared/components/side-bar/professor-side-bar/professor-side-bar.component.html
+++ b/teca/src/app/shared/components/side-bar/professor-side-bar/professor-side-bar.component.html
@@ -19,7 +19,7 @@
 
       <ion-item color="atomik" lines="none" href="/cursos">
         <ion-icon id="cursoIcon"></ion-icon>
-        <ion-label class="options">Cursos</ion-label>
+        <ion-label class="options">Grupos</ion-label>
       </ion-item>
 
       <ion-item color="atomik" lines="none" href="/puntajes">
