--- a/teca/src/app/courses/components/course-list/course-list.component.html
+++ b/teca/src/app/courses/components/course-list/course-list.component.html
@@ -2,17 +2,17 @@
 <ion-grid class="principal">
     <ion-row>
       <ion-col>
-        <ion-label class="title">Cursos</ion-label>
+        <ion-label class="title">Grupos</ion-label>
       </ion-col>     
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-label class="question">Puedes iniciar creando cursos al darle click a "Activar un nuevo curso"</ion-label>
+        <ion-label class="question">Puedes iniciar creando cursos al darle click a "Activar un nuevo grupo"</ion-label>
       </ion-col>  
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-button color="atomik" shape="round" class="activateCourse" (click)="activate()">Activar curso</ion-button>
+        <ion-button color="atomik" shape="round" class="activateCourse" (click)="activate()">Activar grupo</ion-button>
       </ion-col>
     </ion-row>
     <ion-row class="courses">
