--- a/teca/src/app/activities/components/charts/charts/charts.component.scss
+++ b/teca/src/app/activities/components/charts/charts/charts.component.scss
@@ -1,8 +1,13 @@
 .principal{
+    width: 100vw;
+    height: 100vh;
+    padding: 0%;
+}
+.sidebar{
     padding: 0%;
 }
 .finalRow{
-    height: 50vw;
+    height: 20.1vh;
     margin-top: 10vh;
     margin-left: 10vw;
 }
@@ -24,4 +29,5 @@
   }
 .component{
     height: 449px;
+
 }
