--- a/teca/src/app/campaign/components/campaign-panel/campaign-panel.component.scss
+++ b/teca/src/app/campaign/components/campaign-panel/campaign-panel.component.scss
@@ -1,4 +1,6 @@
 .principal{
+    width: 78.66171875vw;
+    height: 100vh;
     padding: 0px;
 }
 .title{
@@ -30,6 +32,7 @@
     color: #5570FF;
 }
 .toolbar{
+    width: 54.84375vw;
     margin-left: 8.27109375vw;
 }
 .subjectName{
