--- a/teca/src/app/campaign/components/campaign/campaign.component.scss
+++ b/teca/src/app/campaign/components/campaign/campaign.component.scss
@@ -1,7 +1,10 @@
 .principal{
+    width: 100vw;
+    height: 100vh;
     padding: 0px;
 }
 .sidebar{
+    //height: 100vh;
     padding: 0px;
 }
 .component{
