--- a/teca/src/app/pages/actividades/actividades.page.html
+++ b/teca/src/app/pages/actividades/actividades.page.html
@@ -1,4 +1,4 @@
-<ion-content class="principal">
+<ion-content>
   <ion-grid class="principal">
     <app-charts class="area" [keywords]="activitykeywords" [activity]="myActivity" [activitySelected]="data" *ngIf="visibleCharts"></app-charts>
     <app-scheme  class="area" [keywords]="activitykeywords" [activity]="myActivity" [activitySelected]="data" *ngIf="visibleSchemes"></app-scheme>
