--- a/teca/src/app/pages/campania/temas/temas.page.html
+++ b/teca/src/app/pages/campania/temas/temas.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <ion-grid>
+  <ion-grid class="principal">
     <app-subtopic [chapterId]="data"></app-subtopic>
   </ion-grid>
 </ion-content>
