--- a/teca/src/app/pages/estudiantes/estudiantes.page.html
+++ b/teca/src/app/pages/estudiantes/estudiantes.page.html
@@ -1,6 +1,7 @@
-
 <ion-content>
-  <ion-grid>
-    <app-my-students></app-my-students>
+  <ion-grid class="principal">
+      <ion-row>
+          <app-my-students></app-my-students>
+      </ion-row>
   </ion-grid>
 </ion-content>
