--- a/teca/src/app/response-viewer/components/charts/analogy/analogy.component.html
+++ b/teca/src/app/response-viewer/components/charts/analogy/analogy.component.html
@@ -8,7 +8,7 @@
             <ion-col style="align-self: center">
               <ion-row style="justify-content: center">
                 <div>
-                  <ion-textarea disabled readonly [(ngModel)]="this.activityResponse.responses[i].premise" class="analogie-input"></ion-textarea>
+                  <ion-textarea disabled readonly [(ngModel)]="this.activityResponse.responses[i].premise1" class="analogie-input"></ion-textarea>
                 </div>
               </ion-row>
             </ion-col>
@@ -22,7 +22,7 @@
             <ion-col style="align-self: center"> 
               <ion-row style="justify-content: center">
                 <div>
-                  <ion-textarea disabled readonly [(ngModel)]="this.activityResponse.responses[i].alternative" class="analogie-input"></ion-textarea>
+                  <ion-textarea disabled readonly [(ngModel)]="this.activityResponse.responses[i].alternative1" class="analogie-input"></ion-textarea>
                 </div>
               </ion-row>
             </ion-col>
