--- a/teca/src/app/shared/components/side-bar/professor-side-bar/professor-side-bar.component.html
+++ b/teca/src/app/shared/components/side-bar/professor-side-bar/professor-side-bar.component.html
@@ -28,7 +28,7 @@
 
       <ion-item color="atomik" lines="none" href="/puntajes">
         <ion-icon id="puntajeIcon"></ion-icon>
-        <ion-label class="options">Puntajes</ion-label>
+        <ion-label class="options">Seguimiento</ion-label>
       </ion-item>
 
     </ion-col>
@@ -38,7 +38,7 @@
     <ion-col>
       <ion-item color="atomik" lines="none" href="/configuracion">
         <ion-icon id="settingsIcon"></ion-icon>
-        <ion-label class="options">Configuración</ion-label>
+        <ion-label class="settingsText">Configuración</ion-label>
       </ion-item>
     </ion-col>
   </ion-row>
