--- a/teca/src/app/shared/components/side-bar/student-side-bar/student-side-bar.component.scss
+++ b/teca/src/app/shared/components/side-bar/student-side-bar/student-side-bar.component.scss
@@ -1,6 +1,6 @@
 .principal{
-    width: 18,5257812vw;
-    height: auto;
+    width: 18.5257812vw;
+    height: 100vh;
     background: #5570FF;
     padding: 0px;
 }
@@ -27,7 +27,7 @@
 }
 
 .settings{
-    margin-top:47vh;   
+    margin-top:37.5vh;  
 }
 
 .settings:hover{
@@ -47,10 +47,16 @@
  .item #campaignIcon {
      content: url("../../../../../assets/icon/sidebar/campaign.svg");
  }
-
+ .item #settingsIcon {
+    content: url("../../../../../assets/icon/sidebar/settings.svg");
+}
  .item #settingsIcon {
      content: url("../../../../../assets/icon/sidebar/settingsColor.svg");
  }
+ .item #settingsIcon:hover {
+    content: url("../../../../../assets/icon/sidebar/settingsColor.svg");
+}
+
  
 
  .item ion-item:hover #dashboardIcon, .itemSelect #dashboardIcon {
