--- a/teca/src/app/shared/components/themes-view/themes-view.component.scss
+++ b/teca/src/app/shared/components/themes-view/themes-view.component.scss
@@ -1,3 +1,7 @@
+.principal{
+    width: 81.47421875vw;
+    height: 100vh;
+}
 .addButton{
     margin-left: 800px;
 }
@@ -10,7 +14,10 @@
     border-width: 1.5px;
     border-radius: 10px;    
 }
-
+.themes{
+    margin-top: 5.75vh;
+    margin-left: 8.50546875vw;
+}
 .card-title {
     font-family: Muli;
     font-style: normal;
