--- a/teca/src/app/students/components/crud/add-student/add-student.component.scss
+++ b/teca/src/app/students/components/crud/add-student/add-student.component.scss
@@ -1,6 +1,6 @@
 .principal{
     padding: 0px;
-    width: 674px;
+    width: 800px;
     height: 502px;
 }
 .header{
@@ -25,7 +25,8 @@
 }
 .studentContent{
     width: 306px;
-    height: 147px;
+    //height: 447px;
+    height: auto;
     margin-left: 71px;
     margin-right: 297px;
 }
