--- a/teca/src/app/students/components/my-students/my-students.component.html
+++ b/teca/src/app/students/components/my-students/my-students.component.html
@@ -1,6 +1,6 @@
-<ion-grid>
+<ion-grid class="principal">
   <ion-row>
-    <ion-col size="auto">
+    <ion-col size="auto" style="padding: 0%;">
       <app-professor-side-bar></app-professor-side-bar>
     </ion-col>
     <ion-col>
