--- a/teca/src/app/courses/components/activate/activate.component.html
+++ b/teca/src/app/courses/components/activate/activate.component.html
@@ -72,7 +72,7 @@
   </ion-row>
   <ion-row>
     <ion-col>
-      <ion-textarea placeholder="descripción del grupo" class="description"></ion-textarea>
+      <ion-textarea placeholder="Horario del grupo" class="description"></ion-textarea>
     </ion-col>
   </ion-row>
   <ion-row>
