--- a/teca/src/app/courses/components/course-list/course-list.component.scss
+++ b/teca/src/app/courses/components/course-list/course-list.component.scss
@@ -69,4 +69,11 @@
   
     color: #FFFFFF;
   }
-
+.card-subtitle{
+    width: auto;
+    margin-top: 1.25vh;
+    margin-left: auto;
+    margin-right: auto;
+    color: #FFFFFF;
+    text-align: center;
+}
