--- a/teca/src/app/courses/components/subtopic/subtopic.component.html
+++ b/teca/src/app/courses/components/subtopic/subtopic.component.html
@@ -1,9 +1,9 @@
-<ion-grid>
+<ion-grid class="principal">
   <ion-row>
-    <ion-col size="auto">
+    <ion-col size="auto" class="sidebar">
       <app-professor-side-bar></app-professor-side-bar>
     </ion-col>
-    <ion-col>
+    <ion-col class="component">
       <app-themes-view [chapterData]="chapterId"  (themeViewEvent)=editReading($event) *ngIf="visibleThemes"></app-themes-view>
       <app-theme-editor [themeDataInfo]="selectedTheme" (themeEditorEvent)=updateReading($event) *ngIf="visibleReading"></app-theme-editor>
     </ion-col>
