--- a/teca/src/app/pages/registro/registro.page.html
+++ b/teca/src/app/pages/registro/registro.page.html
@@ -2,7 +2,7 @@
   <ion-grid class="principal">
     <ion-row>
       <ion-col size="auto"class="banner">
-        <app-banner title="Bienvenido" text="Introduce tus datos y empieza hoy mismo ha aprender" img="assets/svg/ilustration.svg"></app-banner>
+        <app-banner title="Bienvenido" text="Introduce tus datos y empieza hoy mismo a aprender" img="assets/svg/ilustration.svg"></app-banner>
       </ion-col>
 
       <ion-col >
