--- a/teca/src/app/panel/components/dashboard/professor-dashboard/professor-dashboard.component.scss
+++ b/teca/src/app/panel/components/dashboard/professor-dashboard/professor-dashboard.component.scss
@@ -7,7 +7,7 @@
 .greeting{
     margin-top: 67px;
     margin-left: 8.03671875vw;
-    font-family: Mulish;
+    font-family: Muli;
     font-style: normal;
     font-weight: bold;
     font-size: 2.1875vw;
