--- a/teca/src/app/scores/components/tables/score-table/score-table.component.html
+++ b/teca/src/app/scores/components/tables/score-table/score-table.component.html
@@ -3,95 +3,64 @@
     <ion-row>
       <ion-label class="title">Puntajes</ion-label>
     </ion-row>
-    <ion-row class="table">
+    <ion-row>
       <ion-col>
-        <ion-label class="headers">Nombre</ion-label>
+        <table mat-table [dataSource]="scoresList"  #tabla1>
+          <ng-container matColumnDef="nombre">
+            <th mat-header-cell *matHeaderCellDef class="ion-text-center"> Nombre </th>
+            <td mat-cell *matCellDef="let score" class="ion-text-center">{{score.name}} </td>
+          </ng-container>
+        
+          <ng-container matColumnDef="analogias">
+            <th mat-header-cell *matHeaderCellDef class="ion-text-center"> Analogias </th>
+            <td mat-cell *matCellDef="let score" class="ion-text-center"> {{score.analogias}} </td>
+          </ng-container>
+        
+          <ng-container matColumnDef="sinonimos">
+            <th mat-header-cell *matHeaderCellDef class="ion-text-center"> Sinónimos </th>
+            <td mat-cell *matCellDef="let score" class="ion-text-center"> {{score.sinonimos}} </td>
+          </ng-container>
+        
+          <ng-container matColumnDef="cuadros">
+            <th mat-header-cell *matHeaderCellDef class="ion-text-center"> Cuadros </th>
+            <td mat-cell *matCellDef="let score" class="ion-text-center"> {{score.cuadros}} </td>
+          </ng-container>
+        
+
+          <ng-container matColumnDef="mnemotecnias">
+            <th mat-header-cell *matHeaderCellDef class="ion-text-center"> Mnemotecnias </th>
+            <td mat-cell *matCellDef="let score" class="ion-text-center"> {{score.mnemotecnias}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="llaves">
+            <th mat-header-cell *matHeaderCellDef class="ion-text-center"> Llaves </th>
+            <td mat-cell *matCellDef="let score" class="ion-text-center"> {{score.llaves}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="arbol">
+            <th mat-header-cell *matHeaderCellDef class="ion-text-center"> Arbol </th>
+            <td mat-cell *matCellDef="let score" class="ion-text-center"> {{score.arbol}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="sangrado">
+            <th mat-header-cell *matHeaderCellDef class="ion-text-center"> Sangrado </th>
+            <td mat-cell *matCellDef="let score" class="ion-text-center"> {{score.sangrado}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="mental">
+            <th mat-header-cell *matHeaderCellDef class="ion-text-center"> Mental </th>
+            <td mat-cell *matCellDef="let score" class="ion-text-center"> {{score.mental}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="conceptual">
+            <th mat-header-cell *matHeaderCellDef class="ion-text-center"> Conceptual </th>
+            <td mat-cell *matCellDef="let score" class="ion-text-center"> {{score.conceptual}} </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="columnas"></tr>
+          <tr mat-row *matRowDef="let row; columns: columnas;"></tr>
+        </table>
       </ion-col>
-      <ion-col>
-        <ion-label class="headers">Analogías</ion-label>
-      </ion-col>
-      <ion-col>
-
-          <ion-label class="headers">Compratativo</ion-label>
-
-      </ion-col>
-      <ion-col>
-
-          <ion-label class="headers">Árbol</ion-label>
-
-      </ion-col>
-      <ion-col>
-
-          <ion-label class="headers">Sangrado</ion-label>
-
-      </ion-col>
-      <ion-col>
-
-          <ion-label class="headers">Mnemotécnicas</ion-label>
-
-      </ion-col>
-      <ion-col>
-
-          <ion-label class="headers">Sinónimos</ion-label>
-
-      </ion-col>
-      <ion-col>
-
-          <ion-label class="headers">Llaves</ion-label>
-
-      </ion-col>
-      <ion-col>
-
-          <ion-label class="headers">Mental</ion-label>
-
-      </ion-col>
-      <ion-col>
-
-          <ion-label class="headers">Conceptual</ion-label>
-
-      </ion-col>
-    </ion-row>
-    <ion-row class="table">
-      <ion-grid class="ion-text-center">
-        <ion-row
-          class="row"
-          *ngFor="let score of scoresList | studentFilter: searchtext:'name'"
-        >
-
-  
-          <ion-col>
-            <ion-label class="name">{{ score.name }}</ion-label>
-          </ion-col>
-          <ion-col>
-            
-            <ion-label class="grades">{{ score.analogias }}</ion-label>
-          </ion-col>
-          <ion-col>
-            <ion-label class="grades">{{ score.cuadroCompratativo }}</ion-label>
-          </ion-col>
-          <ion-col>
-            <ion-label class="grades">{{ score.esquemaArbol }}</ion-label>
-          </ion-col>
-          <ion-col>
-            <ion-label class="grades">{{ score.esquemaSangrado }}</ion-label>
-          </ion-col>
-          <ion-col>
-            <ion-label class="grades">{{ score.mnemotecnicas }}</ion-label>
-          </ion-col>
-          <ion-col>
-            <ion-label class="grades">{{ score.sinonimosAntonimos }}</ion-label>
-          </ion-col>
-          <ion-col>
-            <ion-label class="grades">{{ score.esquemaLlaves }}</ion-label>
-          </ion-col>
-          <ion-col>
-            <ion-label class="grades">{{ score.mapaMental }}</ion-label>
-          </ion-col>
-          <ion-col>
-            <ion-label class="grades">{{ score.mapaConceptual }}</ion-label>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
     </ion-row>
   </ion-grid>
 </ion-content>
