--- a/teca/src/app/scores/components/tables/score-table/score-table.component.scss
+++ b/teca/src/app/scores/components/tables/score-table/score-table.component.scss
@@ -38,3 +38,28 @@
     margin-left: 7.72421875vw;
     //margin-right: 7.96875vw;
 }
+table {
+    width: 90%;
+    margin:1rem auto;
+ }
+ th{
+    font-family: Muli;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    letter-spacing: 0.01em;
+    
+    color: #334D6E;
+ }
+ td{
+    font-family: Muli;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: 0.01em;
+    
+    color: #334D6E;
+ }
