--- a/teca/src/app/shared/components/profile-bar/notifications-bar/notification-bar.component.scss
+++ b/teca/src/app/shared/components/profile-bar/notifications-bar/notification-bar.component.scss
@@ -15,7 +15,7 @@
   top: 0px;
 }
 .name {
-  font-family: Mulish;
+  font-family: Muli;
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
