--- a/teca/src/app/shared/components/profile-bar/student-profile/student-profile.component.scss
+++ b/teca/src/app/shared/components/profile-bar/student-profile/student-profile.component.scss
@@ -1,6 +1,6 @@
 .principal{
     width: 22.265625vw;
-    height: 100%;
+    height: auto;
     background: #F1F9FF;
     padding: 0px;
 }
@@ -30,7 +30,7 @@
     margin-top: 5.625vh;
 }
 .logout{
-    margin-top: 7.47625vh;
+    margin-top: 6.47625vh;
 }
 .logoutText{
     font-family: Muli;
