--- a/teca/src/app/shared/components/themes-view/themes-view.component.html
+++ b/teca/src/app/shared/components/themes-view/themes-view.component.html
@@ -10,6 +10,7 @@
       <ion-label></ion-label>
     </ion-col>
   </ion-row>
+  <!--
   <ion-row>
     <ion-col class="addButton">
       <ion-button shape="round">
@@ -17,7 +18,8 @@
       </ion-button>
     </ion-col>
   </ion-row>
-  <ion-row>
+  -->
+  <ion-row class="themes">
     <ion-col *ngFor="let theme of chapterThemes; let i=index" >
       <ion-card class="card">
         <ion-grid>
