--- a/teca/src/app/students/components/students-view/students-view.component.scss
+++ b/teca/src/app/students/components/students-view/students-view.component.scss
@@ -1,3 +1,6 @@
+.principal{
+    padding: 0%;
+}
 .title{
     margin-top: 3.375vh;
     margin-left: 8.11484375vw;
@@ -13,15 +16,16 @@
     position: absolute;
 
 
-font-family: Mulish;
-font-style: normal;
-font-weight: bold;
-font-size: 14px;
-line-height: 18px;
-text-align: center;
-letter-spacing: 0.01em;
+    font-family: Muli;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 18px;
+    text-align: center;
+    text-transform: none;
+    letter-spacing: 0.01em;
 
-color: #FFFFFF;
+    color: #FFFFFF;
 }
 .selectView{
     width: 28.203125vw;
@@ -30,14 +34,14 @@ color: #FFFFFF;
 }
 .viewSelection{
     width: 146px;
-height: 26px;
-    font-family: Mulish;
+    height: 26px;
+    font-family: Muli;
     font-style: normal;
     font-weight: 800;
     font-size: 17px;
     line-height: 21px;
     letter-spacing: 0.01em;
-    
+    text-transform: none;
     color: #4357BF;
 }
 .table{
