--- a/teca/src/app/students/components/tables/general-table/general-table.component.html
+++ b/teca/src/app/students/components/tables/general-table/general-table.component.html
@@ -4,35 +4,7 @@
     <ion-searchbar class="searchbar" (ionChange)="search($event)" placeholder="buscar"></ion-searchbar>
   </ion-row>
   <ion-row>
-    <ion-col>
-      <ion-item lines=none>
-        <ion-label class="headers">Nombre</ion-label>
-        <ion-icon name="chevron-down"></ion-icon>
-      </ion-item>
-    </ion-col>
-    <ion-col >
-      <ion-item lines=none>
-        <ion-label class="headers">Grado</ion-label>
-        <ion-icon name="chevron-down"></ion-icon>
-      </ion-item>
-    </ion-col>
-    <ion-col>
-      <ion-item lines=none>
-        <ion-label class="headers">Correo</ion-label>
-      </ion-item>
-    </ion-col>
-    <ion-col>
-      <ion-item lines=none>
-        <ion-label class="headers">Rendimiento</ion-label>
-      </ion-item>
-    </ion-col>
-    <ion-col>
-      <ion-item lines=none>
-        <ion-label class="headers">Editar</ion-label>
-      </ion-item>
-    </ion-col>
-  </ion-row>
-  <ion-row>
+    <!--
     <ion-grid class="ion-text-center">
       <ion-row class="row" *ngFor="let names of studentsList | studentFilter: searchtext: 'nombre', 'grado'">
         <ion-col>
@@ -54,5 +26,58 @@
         </ion-col>
       </ion-row>
     </ion-grid>
+    -->
+    <ion-col>
+      <table mat-table [dataSource]="studentsList"  #tabla1>
+        <ng-container matColumnDef="nombre">
+          <th *matHeaderCellDef class="title">
+            <ion-item lines=none>
+              <ion-label class="headers">Nombre</ion-label>
+              <ion-icon name="chevron-down"></ion-icon>
+            </ion-item>
+          </th>
+          <td  *matCellDef="let salesman" class="rows"> {{salesman.name}} </td>
+        </ng-container> 
+        <ng-container matColumnDef="grado">
+          <th  *matHeaderCellDef class="title">
+            <ion-item lines=none>
+              <ion-label class="headers">Grado</ion-label>
+              <ion-icon name="chevron-down"></ion-icon>
+            </ion-item>
+          </th>
+          <td  *matCellDef="let salesman" class="rows"> {{salesman.level}} </td>
+        </ng-container>     
+        <ng-container matColumnDef="email">
+          <th  *matHeaderCellDef class="title">
+            <ion-item lines=none>
+              <ion-label class="headers">Correo</ion-label>
+            </ion-item>
+          </th>
+          <td  *matCellDef="let salesman" class="rows"> {{salesman.email}} </td>
+        </ng-container>
+        <ng-container matColumnDef="rendimiento">
+          <th  *matHeaderCellDef class="title">
+            <ion-item lines=none>
+              <ion-label class="headers">Rendimiento</ion-label>
+            </ion-item>
+          </th>
+          <td *matCellDef="let salesman" class="rows"> {{salesman.performance}} </td>
+        </ng-container>  
+        <ng-container matColumnDef="editar">
+          <th  *matHeaderCellDef>
+            <ion-item lines="none">
+              <ion-label class="headers">Editar</ion-label>
+            </ion-item>
+          </th>
+          <td  *matCellDef="let j = index;" class="ion-text-center">
+            <ion-button (click)="updateRow(j)" class="editButton">
+              <ion-icon name="pencil-outline"></ion-icon>
+            </ion-button>
+          </td>
+        </ng-container> 
+        <tr mat-header-row *matHeaderRowDef="columns"></tr>
+        <tr mat-row *matRowDef="let row; columns: columns;"></tr>
+      </table>
+    </ion-col>
   </ion-row>
 </ion-grid>
